// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add private source 1`] = `
<div
  class="new-source__header"
>
  <h3>
    Source added 🎉
  </h3>
   
  <p>
    
      From now on new articles from this source will be added to your feed. Enjoy
    
  </p>
</div>
`;

exports[`should add private source wit manually typed name 1`] = `
<div
  class="new-source__header"
>
  <h3>
    Source added 🎉
  </h3>
   
  <p>
    
      From now on new articles from this source will be added to your feed. Enjoy
    
  </p>
</div>
`;

exports[`should list scraped rss feeds 1`] = `
<div
  class="new-source__status"
>
  <span>
    
        2 RSS feeds found
      
  </span>
</div>
`;

exports[`should list scraped rss feeds 2`] = `
<div
  class="new-source__footer no-padding"
>
  <div
    class="radio"
  >
    <label
      class="radio-item checked"
    >
      <input
        name="rss"
        type="radio"
      />
       
      <span
        class="radio-item__checkmark"
      >
        <span
          class="radio-item__checkmark__focus"
        />
      </span>
       A
  
    </label>
    <label
      class="radio-item"
    >
      <input
        name="rss"
        type="radio"
      />
       
      <span
        class="radio-item__checkmark"
      >
        <span
          class="radio-item__checkmark__focus"
        />
      </span>
       B
  
    </label>
  </div>
   
  <button
    class="btn btn-big btn-invert new-source__confirm"
  >
    Continue
  </button>
</div>
`;

exports[`should proceed directly to source info when one rss is available 1`] = `
<div
  class="new-source__status"
>
  <span>
    
        Please confirm the details below
      
  </span>
</div>
`;

exports[`should proceed directly to source info when one rss is available 2`] = `
<div
  class="new-source__footer"
>
  <div
    class="new-source__name"
  >
    <img
      alt="Source logo"
      src="https://example.com/logo.png"
    />
     
    <div
      class="text-field"
    >
      <div
        class="text-field__box field active"
      >
        <!---->
         
        <div
          class="text-field__input-container"
        >
          <label
            class="text-field__label micro2"
            style="display: none;"
          >
            Source name
          </label>
           
          <input
            aria-label="Source name"
            autofocus="autofocus"
            class="text-field__input"
            maxlength="50"
            placeholder="Source name"
            required="required"
            type="text"
          />
        </div>
         
        <span
          class="text-field__count lil1"
        >
          
      43
    
        </span>
         
      </div>
       
      <div
        class="text-field__hint micro2"
      >
        
    
  
      </div>
    </div>
  </div>
   
  <div
    class="new-source__submit"
  >
    <div>
      <div
        class="new-source__submit__info"
      >
        <h3>
          Public
        </h3>
         
        <p>
          
            We will review your request to make sure it qualifies the standards.
          <br />
          <br />
          
            If the source is approved, it will be added to the public sources list.
            We will update you by email.
          <br />
          <br />
          
            Read the 
          <a
            href="https://daily.dev/content-guidelines"
            target="_blank"
          >
            content guidelines
          </a>
        </p>
      </div>
       
      <button
        class="btn btn-big btn-hollow"
      >
        
          Request
        
      </button>
    </div>
     
    <div>
      <div
        class="new-source__submit__info"
      >
        <h3>
          Private 
          <div
            class="svg premium-badge"
          />
        </h3>
         
        <p>
          
            Personalize your feed with  custom private sources of your choice.
          <br />
          <br />
          
            This source will be added to your feed 
          <strong>
            immediately
          </strong>
          .
          
        </p>
      </div>
       
      <button
        class="btn btn-big"
      >
        
          Add now
        
      </button>
    </div>
  </div>
</div>
`;

exports[`should proceed to source info after selecting rss 1`] = `
<div
  class="new-source__status"
>
  <span>
    
        Please confirm the details below
      
  </span>
</div>
`;

exports[`should proceed to source info after selecting rss 2`] = `
<div
  class="new-source__footer"
>
  <div
    class="new-source__name"
  >
    <img
      alt="Source logo"
      src="https://example.com/logo.png"
    />
     
    <div
      class="text-field"
    >
      <div
        class="text-field__box field active"
      >
        <!---->
         
        <div
          class="text-field__input-container"
        >
          <label
            class="text-field__label micro2"
            style="display: none;"
          >
            Source name
          </label>
           
          <input
            aria-label="Source name"
            autofocus="autofocus"
            class="text-field__input"
            maxlength="50"
            placeholder="Source name"
            required="required"
            type="text"
          />
        </div>
         
        <span
          class="text-field__count lil1"
        >
          
      43
    
        </span>
         
      </div>
       
      <div
        class="text-field__hint micro2"
      >
        
    
  
      </div>
    </div>
  </div>
   
  <div
    class="new-source__submit"
  >
    <div>
      <div
        class="new-source__submit__info"
      >
        <h3>
          Public
        </h3>
         
        <p>
          
            We will review your request to make sure it qualifies the standards.
          <br />
          <br />
          
            If the source is approved, it will be added to the public sources list.
            We will update you by email.
          <br />
          <br />
          
            Read the 
          <a
            href="https://daily.dev/content-guidelines"
            target="_blank"
          >
            content guidelines
          </a>
        </p>
      </div>
       
      <button
        class="btn btn-big btn-hollow"
      >
        
          Request
        
      </button>
    </div>
     
    <div>
      <div
        class="new-source__submit__info"
      >
        <h3>
          Private 
          <div
            class="svg premium-badge"
          />
        </h3>
         
        <p>
          
            Personalize your feed with  custom private sources of your choice.
          <br />
          <br />
          
            This source will be added to your feed 
          <strong>
            immediately
          </strong>
          .
          
        </p>
      </div>
       
      <button
        class="btn btn-big"
      >
        
          Add now
        
      </button>
    </div>
  </div>
</div>
`;

exports[`should show error when cannot find rss 1`] = `
<div
  class="new-source__status"
>
  <div
    class="new-source__contact error"
  >
    <span>
      Could not find RSS feed
    </span>
     
    <a
      class="btn btn-hollow"
      href="mailto:hi@daily.dev?subject=Failed to add new source"
      target="_blank"
    >
      Contact
    </a>
  </div>
</div>
`;

exports[`should show error when cannot scrape website 1`] = `
<div
  class="new-source__status"
>
  <div
    class="new-source__contact error"
  >
    <span>
      Failed to fetch information
    </span>
     
    <a
      class="btn btn-hollow"
      href="mailto:hi@daily.dev?subject=Failed to add new source"
      target="_blank"
    >
      Contact
    </a>
  </div>
</div>
`;

exports[`should show source exists message 1`] = `
<div
  class="new-source__status"
>
  <div
    class="new-source__exists"
  >
    <img
      alt="Source logo"
      src="https://source.com/logo.png"
    />
     
    <span
      class="micro1"
    >
      Source
    </span>
     
    <span
      class="micro2"
    >
      Already exists
    </span>
  </div>
</div>
`;

exports[`should show source exists message 2`] = `undefined`;
